<resources>
    <string name="app_name">NeWork</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="login_to_register_text">Don\'t have an account? Register</string>
    <string name="prompt_registration">Registration</string>
    <string name="prompt_name">Name</string>
    <string name="appbar_menu">View Profile or Login</string>
    <string name="text_label_posts">Posts</string>
    <string name="text_label_events">Events</string>
    <string name="text_label_users">Users</string>
    <string name="add_post">Add Post</string>
    <string name="add_event">Add Event</string>
    <string name="description_photo">Attaching Photo</string>
    <string name="remove">Remove</string>
    <string name="back">Go back</string>
    <string name="enter_text">Enter text…</string>
    <string name="attach_photo_description">Attach Photo</string>
    <string name="attach_description">Attach Audio/Video</string>
    <string name="tag_users_description">Tag Users</string>
    <string name="location_description">Pin your location</string>
    <string name="save_changes">Save Changes</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="date">Date</string>
    <string name="datetime_format">MM/dd/yyyy HH:mm</string>
    <string name="type">Type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="open_bottom_sheet_dialog">Open Bottom Sheet Dialog</string>
    <string name="user_photo">User Photo</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="you">You</string>
    <string name="new_job">New Job</string>
    <string name="prompt_position">Position</string>
    <string name="enter_dates">Enter dates</string>
    <string name="create_job">Create</string>
    <string name="description_author_avatar">Author avatar</string>
    <string name="test_title">Нетология. Университет интернет-профессий</string>
    <string name="test_data_published">28.11.2024 21:44</string>
    <string name="description_post_menu">Post menu</string>
    <string name="test_content">Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу.</string>
    <string name="play_video">Play Video</string>
    <string name="play_audio">Play Audio</string>
    <string name="image_attachment">Attached Image</string>
    <string name="event_date_hint">Date:</string>
    <string name="event_format_hint">Format:</string>
    <string name="speakers">Speakers</string>
    <string name="party">Party</string>
    <string name="join">Join</string>
    <string name="prompt_event">Event</string>
    <string name="share_event">Share Event</string>
    <string name="likers">Likers</string>
    <string name="participants">Participants</string>
    <string name="set_location">Set Location</string>
    <string name="company">Company</string>
    <string name="test_company">ООО \"Рога и копыта\"</string>
    <string name="test_period">"1 марта 2019 – 1 августа 2020 "</string>
    <string name="test_position">Главный инженер-программист</string>
    <string name="prompt_post">Post</string>
    <string name="empty_login">Login can\'t be blank</string>
    <string name="empty_name">Name can\'t be blank</string>
    <string name="empty_password">Password can\'t be blank</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="photo_format_requirements">The photo must be a file of type: jpeg, png</string>
    <string name="photo_size_requirements">Maximum photo size: 2048x2048 px.</string>
    <string name="registration_403">This login is already registered.</string>
    <string name="registration_415">Invalid photo format</string>
    <string name="chooser_share_post">Share post</string>
    <string name="mentioned">Mentioned</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="error_upload">Media upload failed</string>
    <string name="audio">Attach Audio</string>
    <string name="video">Attach Video</string>
    <string name="zoom_in">Zoom In</string>
    <string name="link">Enter link:</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="select_location">Select Location</string>
    <string name="error_loading">Error loading</string>
    <string name="retry_loading">Retry loading</string>
    <string name="select_date">Select date</string>
    <string name="on_success">Success</string>
    <string name="view_profile">View Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_job">Edit Job</string>
    <string name="prompt_link">Link</string>
    <string name="delete_job">Delete My Job</string>
</resources>