<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_card">

    <LinearLayout
        android:id="@+id/job_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/basic_screen_padding"
                android:layout_marginEnd="@dimen/basic_screen_padding"
                android:paddingVertical="@dimen/common_spacing"
                android:textSize="@dimen/author_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/remove_job"
                tools:text="@string/test_company" />

            <TextView
                android:id="@+id/period"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/basic_screen_padding"
                android:layout_marginEnd="@dimen/basic_screen_padding"
                android:paddingTop="@dimen/common_spacing"
                android:paddingBottom="@dimen/usual_margin"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintTop_toBottomOf="@id/company"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/remove_job"
                tools:text="@string/test_period" />
            <ImageButton
                android:id="@+id/remove_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/delete_job"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_remove_job"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_screen_padding"
            android:layout_marginEnd="@dimen/basic_screen_padding"
            android:paddingVertical="@dimen/usual_margin"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold"
            tools:text="@string/test_position" />


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>