<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditPostFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/edit_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/editor_top_app_bar"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            tools:title="New post" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/edit_post_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/edit_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/usual_margin"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/enter_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing"
                android:textColorHint="@color/purple_200"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/photo_container"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                tools:layout_editor_absoluteX="16dp" />


            <!--            <EditText-->
            <!--                android:id="@+id/edit_post"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:autofillHints="@string/enter_text"-->
            <!--                android:background="@android:color/transparent"-->
            <!--                android:fontFamily="@font/roboto_medium"-->
            <!--                android:inputType="textMultiLine"-->
            <!--                android:padding="@dimen/common_spacing"-->
            <!--                android:textSize="@dimen/edit_text_size"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />-->

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/edit_link"
                app:layout_constraintTop_toBottomOf="@id/edit_post">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_photo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/remove_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/remove" />
            </FrameLayout>

            <EditText
                android:id="@+id/edit_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:hint="@string/link"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintTop_toBottomOf="@id/photo_container"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/attachment_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@id/edit_footer">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/audio_selector"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/basic_screen_padding"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/audio"
            android:textColor="@color/white"
            android:textSize="@dimen/author_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/video_selector"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/basic_screen_padding"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video"
            android:textColor="@color/white"
            android:textSize="@dimen/author_text_size" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/edit_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/edit_post_bottom_app_bar"
            style="@style/Widget.Material3.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/editor_bottom_app_bar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
